Bug 13451 - Shopping bag: last line alignment is incorrect

--- a/skins/retail/css/main.css
+++ b/skins/retail/css/main.css
@@ -551,15 +551,9 @@ section.maintenance p {
 }
 #cart .order-items h3, .confirmPayCard .order-items h3 {
     font-size: inherit;
-    width: 170px;
+    width: auto;
     line-height: 15px;
     margin-left: 75px;
-}
-#cart .checkout .order-items h3 {
-    width: 308px;
-}
-.confirmPayCard .order-items h3 {
-    width: 270px;
 }
 #cart .order-items h3 .name, .confirmPayCard .order-items h3 .name {
     text-transform: uppercase;
@@ -646,22 +640,12 @@ section.maintenance p {
 @media only screen and (max-device-width: 949px) {
     body {
         min-width: 748px;
-    }
-    #cart .checkout .order-items h3 {
-        width: 134px !important;
-    }
-    .confirmPayCard .order-items h3 {
-        width: 200px !important;
-    }
-}
+    }}
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
     html.ipad {
         height: 672px !important;
         position: absolute;
         top: 0;
-    }
-    #cart .checkout .order-items h3 {
-        width: 224px !important;
     }
 }
 
